tests/parsing/cmc/errors/149.expected
File "tests/parsing/cmc/errors/149.cmc", line 1, character 30-31:
1 | (check-system sys :reachable ())
                                  ^
Error while parsing a reachability variable definition,
      read a closing parenthesis,
      but expected a variable name.
